--- a/src/pages/Admin/CreateUser.css
+++ b/src/pages/Admin/CreateUser.css
@@ -1,5 +1,5 @@
 /* Modal Overlay */
-.modal-overlay {
+.modal-overlay-create-user {
     position: fixed;
     top: 0;
     left: 0;
@@ -15,7 +15,7 @@
   }
   
   /* Modal Content */
-  .modal-content {
+  .modal-content-create-user {
     background: white;
     width: 90%; /* Adjust width as needed */
     max-width: 600px;
@@ -26,7 +26,7 @@
     max-height: calc(100vh - 40px); /* Ensures the modal fits within the viewport, accounting for padding */
     position: relative;
     display: flex;
-
+    
     flex-direction: column;
     pointer-events: auto;
     background-clip: padding-box;
@@ -39,12 +39,12 @@
     -ms-overflow-style: none; /* Internet Explorer 10+ */
   }
 
-  .modal-content::-webkit-scrollbar {
+  .modal-content-create-user::-webkit-scrollbar {
     display: none; /* Chrome, Safari, and Opera */
 }
   
   
-  .modal-header {
+  .modal-header-create-user {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -78,13 +78,14 @@
   }
   
   .form-group {
-    margin-bottom: 15px;
+    margin-top: 15px;
   }
   
   .form-group label {
     display: block;
     font-size: 14px;
     margin-bottom: 5px;
+    text-align: left;
   }
   
   .form-group input,
@@ -210,6 +211,8 @@
   .info-box ul li {
     margin-bottom: 5px; /* Space between list items */
   }
+
+ 
   
 
   
